--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <div class="carousel-item active">
                      <div class="container">
                         <h1 class="banner_taital">SMK TI PEMBANGUNAN</h1>
-                        <p class="banner_text">SMK TI PEMBANGUNAN CIMAHI adalah salah satu SMK suwasta yang berakreditasi baik,sekolah ini sudah mengeluarkan siswa siswi sebanyak 19-Angkatan dengan jumlah per angkatan yang cukup banyak. SMK TI PEMBANGUNAN ini juga merupakan salah satu SMK yang terkenal dengan sekolh pencetak WIRAUSAHA yang baik.</p>
+                        <p class="banner_text">SMK TI PEMBANGUNAN CIMAHI adalah salah satu SMK swasta yang berakreditasi baik,sekolah ini sudah mengeluarkan siswa siswi sebanyak 19-Angkatan dengan jumlah per angkatan yang cukup banyak. SMK TI PEMBANGUNAN ini juga merupakan salah satu SMK yang terkenal dengan sekolh pencetak WIRAUSAHA yang baik.</p>
                         <div class="read_bt"><a href="#">Get A Quote</a></div>
                      </div>
                   </div>
